# Calc24

./: .gitignore  Calc24.sln  README.md
Calc24Client/: CMakeLists.txt  Calc24Client.vcxproj  Calc24Client.vcxproj.filters  TCPClient.cpp  TCPClient.h  main.cpp
Calc24Server/: CMakeLists.txt  Calc24Server.vcxproj  Calc24Server.vcxproj.filters  Player.cpp  Player.h  TCPServer.cpp  TCPServer.h  main.cpp
Calc24Server/x64/Debug/: vc143.idb
Calc24Server/x64/Debug/Calc24Server.tlog/: CL.command.1.tlog  Calc24Server.lastbuildstate
